# pydantic-demo

./: README.md  pyproject.toml
src/pydantic_demo/: main.py
tests/pydantic_demo/: test_main.py
tests/pydantic_demo/inputs/: test_main_succeeded.json
